--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://Souvik50.github.io/monsters",
   "dependencies": {
     "gh-pages": "2.0",
+    "lodash": "^4.17.15",
+    "lodash.template": "^4.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
